fixed overlapping popup warnings

--- a/style.css
+++ b/style.css
@@ -143,20 +143,21 @@ input {
     background-color: var(--navBG);
     border: var(--settingsborder);
     border-radius: 20px;
-    width: 80%;
+    width: 100%;
     max-width: 360px;
+    min-width: 220px;
     z-index: 2;
     position: absolute;
     display: none;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 150%);
-    
+    transform: translate(-50%, -80%);
 }
 
 #percentText, #zeroText {
     color: red;
     margin: 20px auto;
+    min-width: 175px;
 }
 
 #expenses {
